--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
     "nodemon": "^3.1.11"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0"
   }
 }
