--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "nodemon": "^3.1.11"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.2"
   }
 }
