--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^5.1.0",
     "http-errors": "^2.0.1",
     "mongoose": "^9.0.0",
+    "nodemailer": "^7.0.11",
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.2"
   }
